--- a/latex/Experiments.tex
+++ b/latex/Experiments.tex
@@ -154,7 +154,7 @@ Random Forests is more or less an extension of Bagging, and tries to improve per
   \label{fig:baggAndRF}
 \end{figure}
 \\
-Figure~\ref{fig:RFSpam} shows how the number of randomly chosen features $m$ affects the test error. This is done for different number of trees, and the vertical line marks the default value $m = \lfloor \sqrt{p} \rfloor$. In this case the default value for $m$ might seem a little high for larger forests. Nevertheless, in terms of test error, it is very close to the optimal value and defends its position as a default parameter value well. 
+Figure~\ref{fig:RFSpam} shows how the number of randomly chosen features $m$ affects the test error. This is done for different number of trees, and the vertical line marks the default value $m = \lfloor \sqrt{p} \rfloor$. In this case the default value for $m$ might seem a little high. Nevertheless, in terms of test error, it is very close to the optimal value and defends its position as a default parameter value well. 
 \\
 \begin{figure}[htpb]
 \begin{center}
