--- a/latex/Experiments.tex
+++ b/latex/Experiments.tex
@@ -7,7 +7,7 @@ To measure the performance and explore the how well theory and practice coincide
 Most computations were run on a sever, and as a result the computation times were too inaccurate to be presented as results. They were therefore omitted from the report.
 \\
 \\
-The most important part of the code used in the experiments can be found in Appendix~\ref{chap:Code}. It is primarily included so the reader can easily check which parameters are used. The full code can be found at my github repository \footnote{\url{https://github.com/havakv/Project}}.
+The most important part of the code used in the experiments can be found in Appendix~\ref{chap:Code}. It is primarily included so the reader can easily check which parameters are used. The full code can be found at github \footnote{\url{https://github.com/havakv/Project/tree/master/code/spam}}.
 
 
 \section{Spam dataset}
